First batch of query tests

--- a/test/runner.html
+++ b/test/runner.html
@@ -32,6 +32,7 @@
    var _paths = {
        'chai': '../node_modules/chai/chai.js',
        'underscore.string': '../node_modules/underscore.string/dist/underscore.string.js',
+       'when': '../node_modules/when/dist/browser/when.js',
    };
 
    var _packages = {
