--- a/test/runner.html
+++ b/test/runner.html
@@ -25,24 +25,20 @@
    };
 
    if (debug) {
-       _common_js.moduleLoader = '../node_modules/curl-amd/src/'
+       _common_js.moduleLoader = '/node_modules/curl-amd/src/'
            + _common_js.moduleLoader;
    }
 
    var _paths = {
-       'chai': '../node_modules/chai/chai.js',
-       'underscore.string': '../node_modules/underscore.string/dist/underscore.string.js',
-       'when': '../node_modules/when/dist/browser/when.js',
+       'chai': '/node_modules/chai/chai.js',
+       'underscore': '/node_modules/underscore/underscore.js',
+       'underscore.string': '/node_modules/underscore.string/dist/underscore.string.js',
+       'when': '/node_modules/when/dist/browser/when.js',
    };
 
    var _packages = {
-       'left-pad': {
-           location: '../node_modules/left-pad/',
-           main: 'index.js',
-           config: _common_js,
-       },
        'n3': {
-           location: '../node_modules/n3/browser',
+           location: '/node_modules/n3/browser',
            main: 'n3-browser.js',
            config: _common_js,
        },
@@ -55,7 +51,7 @@
        packages: _packages,
    };
 
-   curl(_config, ['test/test.js']).then(function () {
+   curl(_config, ['/test/test.js']).then(function () {
        mocha.checkLeaks();
        mocha.run();
    }, function (err) {
