--- a/test/runner.html
+++ b/test/runner.html
@@ -31,6 +31,7 @@
 
    var _paths = {
        'chai': '/node_modules/chai/chai.js',
+       'httpinvoke': '/node_modules/httpinvoke/httpinvoke-browser.js',
        'underscore': '/node_modules/underscore/underscore.js',
        'underscore.string': '/node_modules/underscore.string/dist/underscore.string.js',
        'when': '/node_modules/when/dist/browser/when.js',
