JSON-LD support

--- a/test/runner.html
+++ b/test/runner.html
@@ -32,9 +32,16 @@
    var _paths = {
        'chai': '/node_modules/chai/chai.js',
        'httpinvoke': '/node_modules/httpinvoke/httpinvoke-browser.js',
+       'jsonld': '/node_modules/jsonld/js/jsonld.js',
        'underscore': '/node_modules/underscore/underscore.js',
        'underscore.string': '/node_modules/underscore.string/dist/underscore.string.js',
        'when': '/node_modules/when/dist/browser/when.js',
+
+       // urijs
+       'IPv6': '/node_modules/urijs/src/IPv6.js',
+       'punycode': '/node_modules/urijs/src/punycode.js',
+       'SecondLevelDomains': '/node_modules/urijs/src/SecondLevelDomains.js',
+       'urijs': '/node_modules/urijs/src/URI.js',
    };
 
    var _packages = {
